[package]
name = "spec_test"
version = "0.1.0"
authors = ["Vitaly Drogan <vitaliy.drogan@gmail.com>"]
edition = "2018"

[dependencies]
models = { path = "../models", version = "0.0.1" }
franklin_crypto = { package = "franklin-crypto", git = "ssh://git@github.com/matter-labs/franklin-crypto.git" }
log = "0.4"
env_logger = "0.6"
actix-web = "1.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"
hex = "0.3.2"
