[package]
name = "testhelper"
version = "0.1.0"
authors = ["furkhat <vailodf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models", version = "0.0.1" }
crypto_exports = { path = "../crypto_exports", version = "0.1.0" }
web3 = "0.8.0"
