[package]
name = "testkit"
version = "0.1.0"
authors = ["Vitaly Drogan <vd@matterlabs.dev>"]
edition = "2018"

[dependencies]
server = { path = "../server", version = "0.0.1" }
models = { path = "../models", version = "0.0.1" }
storage = { path = "../storage", version = "0.0.1" }
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="baldyash/deterministic_sig"}
eth_client = { path = "../eth_client", version = "0.1.0"  }

tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }
log = "0.4"
bigdecimal = { version = "0.1.0", features = ["serde"]}
rand = "0.4"
web3 = "0.8.0"
ethabi = "8.0.0"
failure = "0.1"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"
