[package]
name = "testkit"
version = "0.1.0"
authors = ["Vitaly Drogan <vd@matterlabs.dev>"]
edition = "2018"

[dependencies]
server = { path = "../server", version = "0.0.1" }
prover = { path = "../prover", version = "0.0.1" }
models = { path = "../models", version = "0.0.1" }
crypto_exports = { path = "../crypto_exports", version = "0.1.0" }

eth_client = { path = "../eth_client", version = "0.1.0"  }

tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }
log = "0.4"
env_logger = "0.6"
num = { version = "0.2", features = ["serde"] }
ethabi = "9.0.0"
web3 = "0.10.0"
failure = "0.1"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"
