[package]
name = "witness_generator"
version = "0.1.0"
authors = ["furkhat <vailodf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../storage", version = "0.0.1" }
models = { path = "../models", version = "0.0.1" }
prover = { path = "../prover", version = "0.0.1" }
diesel = { version = "1.4.2", features = ["postgres", "serde_json", "r2d2", "chrono", "numeric"] }
ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
bellman = { package = "bellman_ce", version = "0.3.0" }
reqwest = "0.9.22"
actix-web = "1.0"
serde = "1.0.90"
serde_json = "1.0.0"
tokio = "0.1.18"
futures = "0.1.28"