[package]
name = "witness_generator"
version = "0.1.0"
authors = ["furkhat <vailodf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../storage", version = "0.0.1" }
models = { path = "../models", version = "0.0.1" }
testhelper = { path = "../testhelper", version = "0.1.0" }
prover = { path = "../prover", version = "0.0.1" }
plasma = { path = "../plasma", version = "0.1.1" }
circuit = { path = "../circuit", version = "0.1.1"}
pairing = { package = "pairing_ce", version = "0.17.0" }
rand = "0.4"
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="master"}
diesel = { version = "1.4.2", features = ["postgres", "serde_json", "r2d2", "chrono", "numeric"] }
ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
bellman = { package = "bellman_ce", version = "0.3.0" }
reqwest = "0.9.22"
actix-web = "1.0"
serde = "1.0.90"
serde_json = "1.0.0"
tokio = "0.1.18"
futures = "0.1.28"
web3 = "0.8.0"
bigdecimal = { version = "0.1.0", features = ["serde"]}
